tests/negative/gold/shadow3_test.gold
tests/negative/shadow3_test.toit:8:3: error: Definition of 'x' shadows earlier definition
  x := 1
  ^
tests/negative/shadow3_test.toit:6:3: note: Earlier definition of 'x'
  x := 0
  ^
Compilation failed.
